--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -8,11 +8,8 @@ Recommender systems are usually tightly coupled to the context and architecture 
 
 \section{Proposal Structure}
 
-This proposal discusses specific challenges of recommender systems and -- based on the background research as well as evaluation of existing solutions -- proposes a potential solution to overcome them. Design requirements for the proposed solution are examined and resultant technology choices are defined. Finally, a project plan to ensure the project's execution is compiled.
-
 \begin{description}
-    \item[Section 2] introduces the concept of recommender systems. An overview of recommender techniques as well as algorithms are described.
-    \item[Section 3] discusses challenges of recommender system and requirements of the proposed solution. Then, existing solutions are evaluated in their coping with these challenges.
-    \item[Section 4] presents the architectural design of the solution and defines the technologies to be used.
-    \item[Section 5] defines a project plan including methodology, evaluation, schedule and a fallback plan in case of complications.
+    \item[Section 2] introduces the concept of recommender systems. An overview of recommender techniques as well as algorithms are described. Finally, adoption of recommender systems in research and enterprises as well as existing solutions are evaluated.
+    \item[Section 3] discusses challenges of recommender system as well as requirements for the project. The aims and objectives of the project are explained.
+    \item[Section 4] presents the architectural design of the solution and defines the technologies to be used. Finally, a project plan is laid out.
 \end{description}
